--- a/.github/workflows/sandpaper-main.yaml
+++ b/.github/workflows/sandpaper-main.yaml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
       - master
+      - l10n_main
   schedule:
     - cron: '0 0 * * 2'
   workflow_dispatch:
@@ -33,6 +34,8 @@ jobs:
 
       - name: "Checkout Lesson"
         uses: actions/checkout@v3
+        with:
+          ref: l10n_main
 
       - name: "Set up R"
         uses: r-lib/actions/setup-r@v2
@@ -57,5 +60,10 @@ jobs:
         run: |
           reset <- "${{ github.event.inputs.reset }}" == "true"
           sandpaper::package_cache_trigger(TRUE)
-          sandpaper:::ci_deploy(reset = reset)
+          renv::install("joelnitta/dovetail")
+          lesson_trans_dir <- paste0(tempdir(), "/dovetail-", Sys.Date())
+          dovetail:::make_translated_dir(
+            translated_dir = lesson_trans_dir, overwrite = TRUE, lang = "ja",
+            l10n_branch = NULL, clean = FALSE)
+          sandpaper:::ci_deploy(path = lesson_trans_dir, reset = reset)
         shell: Rscript {0}
